syntax = "proto3";

package PreprocessorCacheApi;

enum PreprocessorExpressionTokenType {
	ParenOpen = 0;
	ParenClose = 1;
	Add = 2;
	Subtract = 3;
	Multiply = 4;
	Divide = 5;
	Modulus = 6;
	Equals = 7;
	NotEquals = 8;
	LessThan = 9;
	LessEquals = 10;
	GreaterThan = 11;
	GreaterEquals = 12;
	BitwiseAnd = 13;
	BitwiseBor = 14;
	BitwiseXor = 15;
	BitwiseNot = 16;
	LeftShift = 17;
	RightShift = 18;
	BooleanOr = 19;
	BooleanAnd = 20;
	BooleanXor = 21;
	BooleanNot = 22;
	Stringify = 23;
	Join = 24;
	Comma = 25;
}

message PreprocessorExpressionToken {
	oneof Data {
		PreprocessorExpressionTokenType Type = 1;
		string Identifier = 2;
		int64 Number = 3;
		string Text = 4;
		string Whitespace = 5;
	}
}

enum CacheHit {
	Hit = 0;
	MissDueToFileOutOfDate = 1;
	MissDueToMissingFile = 2;
}

message GetUnresolvedDependenciesRequest {
	string path = 1;
}

message GetUnresolvedDependenciesResponse {
	int64 fileLastWriteTicks = 1;
	repeated string includes = 2;
	repeated string systemIncludes = 3;
	repeated string compiledPlatformHeaderIncludes = 4;
	int64 resolutionTimeMs = 5;
	CacheHit cacheStatus = 6;
}

message GetResolvedDependenciesRequest {
	string path = 1;
	repeated string includeDirectories = 2;
	repeated string systemIncludeDirectories = 3;
	map<string, string> globalDefinitions = 4;
}

message GetResolvedDependenciesResponse {
	repeated string dependsOnPaths = 1;
}

message PingRequest {
}

message PingResponse {
}

service PreprocessorCache {
	rpc Ping(PingRequest) returns (PingResponse) {}
	rpc GetUnresolvedDependencies(GetUnresolvedDependenciesRequest) returns (GetUnresolvedDependenciesResponse) {}
	rpc GetResolvedDependencies(GetResolvedDependenciesRequest) returns (GetResolvedDependenciesResponse) {}
}